ubuntu-themes (13.04daily13.04.12-0ubuntu2) UNRELEASED; urgency=low

  * debian/control, debian/rules:
    - Changes related to compliance to our packaging standards

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Tue, 30 Apr 2013 21:11:22 +0200

ubuntu-themes (13.04daily13.04.12-0ubuntu1) raring; urgency=low

  * Automatic snapshot from revision 283

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 12 Apr 2013 00:02:22 +0000

ubuntu-themes (13.04daily13.03.13.1-0ubuntu1) raring; urgency=low

  [ Renato Araujo Oliveira Filho ]
  * Adding ubuntu-mobile-icons package
  * [FFe] New ubuntu-mobile-icons package (LP: #1154047)
  * integrate touch icon theme into normal ubuntu icon theme project
    (LP: #1150011)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 281

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Wed, 13 Mar 2013 08:07:55 +0000

ubuntu-themes (13.04daily13.03.12-0ubuntu1) raring; urgency=low

  [ Sebastien Bacher ]
  * Launcher - Update the icons used for the Software Centre, Nautilus,
    and Software Updater (LP: #1081691)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 279

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Tue, 12 Mar 2013 00:02:05 +0000

ubuntu-themes (13.04daily13.03.05-0ubuntu1) raring; urgency=low

  * Automatic snapshot from revision 277

 -- Automatic PS uploader <ps-jenkins@lists.canonical.com>  Tue, 05 Mar 2013 00:01:43 +0000

ubuntu-themes (13.04daily13.02.20-0ubuntu1) raring; urgency=low

  [ Ryan Lortie ]
  * ubuntu-themes don't work with gtk 3.7 (LP: #1130183)

  [ Automatic PS uploader ]
  * Automatic snapshot from revision 275

 -- Automatic PS uploader <ps-jenkins@lists.canonical.com>  Wed, 20 Feb 2013 00:01:27 +0000

ubuntu-themes (13.04daily13.02.14-0ubuntu1) raring; urgency=low

  [ Adolfo Jayme Barrientos ]
  * calendar applet no longer grays out days for months other than
    current (LP: #876167)

  [ Automatic PS uploader ]