@@ -1092,6 +1092,10 @@ GtkComboBox .menu .menuitem *:insensitive {
     text-shadow: 0 -1px shade (@dark_bg_color, 0.7);
 }
 
+GtkModelMenuItem GtkBox GtkImage {
+    padding-right: 6px;
+}
+
 /************
  * notebook *
  ************/
